zvec/src/db/sqlengine/antlr/gen/SQLParser.cc

// Generated from SQLParser.g4 by ANTLR 4.8


#include "SQLParser.h"
#include "SQLParserListener.h"


using namespace antlrcpp;
using namespace antlr4;
using namespace antlr4;

SQLParser::SQLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA,
                                             _sharedContextCache);
}

SQLParser::~SQLParser() {
  delete _interpreter;
}

std::string SQLParser::getGrammarFileName() const {
  return "SQLParser.g4";
}

const std::vector<std::string> &SQLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary &SQLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Swallow_to_semiContext
//------------------------------------------------------------------

SQLParser::Swallow_to_semiContext::Swallow_to_semiContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

std::vector<tree::TerminalNode *> SQLParser::Swallow_to_semiContext::SEMI() {
  return getTokens(SQLParser::SEMI);
}

tree::TerminalNode *SQLParser::Swallow_to_semiContext::SEMI(size_t i) {
  return getToken(SQLParser::SEMI, i);
}


size_t SQLParser::Swallow_to_semiContext::getRuleIndex() const {
  return SQLParser::RuleSwallow_to_semi;
}

void SQLParser::Swallow_to_semiContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterSwallow_to_semi(this);
}

void SQLParser::Swallow_to_semiContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitSwallow_to_semi(this);
}

SQLParser::Swallow_to_semiContext *SQLParser::swallow_to_semi() {
  Swallow_to_semiContext *_localctx =
      _tracker.createInstance<Swallow_to_semiContext>(_ctx, getState());
  enterRule(_localctx, 0, SQLParser::RuleSwallow_to_semi);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(80);
      _la = _input->LA(1);
      if (_la == 0 || _la == Token::EOF || (_la == SQLParser::SEMI)) {
        _errHandler->recoverInline(this);
      } else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (
        (((_la & ~0x3fULL) == 0) &&
         ((1ULL << _la) &
          ((1ULL << SQLParser::OR) | (1ULL << SQLParser::AND) |
           (1ULL << SQLParser::NOT) | (1ULL << SQLParser::IN) |
           (1ULL << SQLParser::CONTAIN_ALL) | (1ULL << SQLParser::CONTAIN_ANY) |
           (1ULL << SQLParser::BETWEEN) | (1ULL << SQLParser::LIKE) |
           (1ULL << SQLParser::WHERE) | (1ULL << SQLParser::SELECT) |
           (1ULL << SQLParser::FROM) | (1ULL << SQLParser::AS) |
           (1ULL << SQLParser::BY) | (1ULL << SQLParser::ORDER) |
           (1ULL << SQLParser::ASC) | (1ULL << SQLParser::DESC) |
           (1ULL << SQLParser::LIMIT) | (1ULL << SQLParser::TRUE_V) |
           (1ULL << SQLParser::FALSE_V) | (1ULL << SQLParser::IS) |
           (1ULL << SQLParser::NULL_V) | (1ULL << SQLParser::INTEGER) |
           (1ULL << SQLParser::FLOAT) | (1ULL << SQLParser::SQUOTA_STRING) |
           (1ULL << SQLParser::DQUOTA_STRING) | (1ULL << SQLParser::DOT) |
           (1ULL << SQLParser::LP) | (1ULL << SQLParser::RP) |
           (1ULL << SQLParser::LMP) | (1ULL << SQLParser::RMP) |
           (1ULL << SQLParser::ASTERISK) | (1ULL << SQLParser::PLUS_SIGN) |
           (1ULL << SQLParser::MINUS_SIGN) | (1ULL << SQLParser::COMMA) |
           (1ULL << SQLParser::SOLIDUS) | (1ULL << SQLParser::MOD) |
           (1ULL << SQLParser::AT_SIGN) | (1ULL << SQLParser::ASSIGN_OP) |
           (1ULL << SQLParser::SHARP_SIGN) | (1ULL << SQLParser::COLON) |
           (1ULL << SQLParser::LE_OP) | (1ULL << SQLParser::GE_OP) |
           (1ULL << SQLParser::NE_OP) | (1ULL << SQLParser::CARET_OP) |
           (1ULL << SQLParser::TILDE_OP) | (1ULL << SQLParser::L_OP) |
           (1ULL << SQLParser::G_OP) | (1ULL << SQLParser::E_OP) |
           (1ULL << SQLParser::CONCAT_OP) | (1ULL << SQLParser::UNDERSCORE) |
           (1ULL << SQLParser::SPACES) | (1ULL << SQLParser::VECTOR) |
           (1ULL << SQLParser::SINGLE_LINE_COMMENT) |
           (1ULL << SQLParser::MULTI_LINE_COMMENT) |
           (1ULL << SQLParser::REGULAR_ID))) != 0));

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Compilation_unitContext
//------------------------------------------------------------------

SQLParser::Compilation_unitContext::Compilation_unitContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

tree::TerminalNode *SQLParser::Compilation_unitContext::EOF() {
  return getToken(SQLParser::EOF, 0);
}

std::vector<SQLParser::Unit_statementContext *>
SQLParser::Compilation_unitContext::unit_statement() {
  return getRuleContexts<SQLParser::Unit_statementContext>();
}

SQLParser::Unit_statementContext *
SQLParser::Compilation_unitContext::unit_statement(size_t i) {
  return getRuleContext<SQLParser::Unit_statementContext>(i);
}

std::vector<tree::TerminalNode *>
SQLParser::Compilation_unitContext::SOLIDUS() {
  return getTokens(SQLParser::SOLIDUS);
}

tree::TerminalNode *SQLParser::Compilation_unitContext::SOLIDUS(size_t i) {
  return getToken(SQLParser::SOLIDUS, i);
}

std::vector<tree::TerminalNode *> SQLParser::Compilation_unitContext::SEMI() {
  return getTokens(SQLParser::SEMI);
}

tree::TerminalNode *SQLParser::Compilation_unitContext::SEMI(size_t i) {
  return getToken(SQLParser::SEMI, i);
}


size_t SQLParser::Compilation_unitContext::getRuleIndex() const {
  return SQLParser::RuleCompilation_unit;
}

void SQLParser::Compilation_unitContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterCompilation_unit(this);
}

void SQLParser::Compilation_unitContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitCompilation_unit(this);
}

SQLParser::Compilation_unitContext *SQLParser::compilation_unit() {
  Compilation_unitContext *_localctx =
      _tracker.createInstance<Compilation_unitContext>(_ctx, getState());
  enterRule(_localctx, 2, SQLParser::RuleCompilation_unit);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(85);
      unit_statement();
      setState(87);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SQLParser::SOLIDUS

          || _la == SQLParser::SEMI) {
        setState(86);
        _la = _input->LA(1);
        if (!(_la == SQLParser::SOLIDUS

              || _la == SQLParser::SEMI)) {
          _errHandler->recoverInline(this);
        } else {
          _errHandler->reportMatch(this);
          consume();
        }
      }
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == SQLParser::SELECT);
    setState(93);
    match(SQLParser::EOF);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Logic_expr_unitContext
//------------------------------------------------------------------

SQLParser::Logic_expr_unitContext::Logic_expr_unitContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

SQLParser::Logic_exprContext *SQLParser::Logic_expr_unitContext::logic_expr() {
  return getRuleContext<SQLParser::Logic_exprContext>(0);
}

tree::TerminalNode *SQLParser::Logic_expr_unitContext::EOF() {
  return getToken(SQLParser::EOF, 0);
}


size_t SQLParser::Logic_expr_unitContext::getRuleIndex() const {
  return SQLParser::RuleLogic_expr_unit;
}

void SQLParser::Logic_expr_unitContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterLogic_expr_unit(this);
}

void SQLParser::Logic_expr_unitContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitLogic_expr_unit(this);
}

SQLParser::Logic_expr_unitContext *SQLParser::logic_expr_unit() {
  Logic_expr_unitContext *_localctx =
      _tracker.createInstance<Logic_expr_unitContext>(_ctx, getState());
  enterRule(_localctx, 4, SQLParser::RuleLogic_expr_unit);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    logic_expr(0);
    setState(96);
    match(SQLParser::EOF);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Unit_statementContext
//------------------------------------------------------------------

SQLParser::Unit_statementContext::Unit_statementContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

SQLParser::Dql_statementContext *
SQLParser::Unit_statementContext::dql_statement() {
  return getRuleContext<SQLParser::Dql_statementContext>(0);
}


size_t SQLParser::Unit_statementContext::getRuleIndex() const {
  return SQLParser::RuleUnit_statement;
}

void SQLParser::Unit_statementContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterUnit_statement(this);
}

void SQLParser::Unit_statementContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitUnit_statement(this);
}

SQLParser::Unit_statementContext *SQLParser::unit_statement() {
  Unit_statementContext *_localctx =
      _tracker.createInstance<Unit_statementContext>(_ctx, getState());
  enterRule(_localctx, 6, SQLParser::RuleUnit_statement);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    dql_statement();

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Where_clauseContext
//------------------------------------------------------------------

SQLParser::Where_clauseContext::Where_clauseContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

tree::TerminalNode *SQLParser::Where_clauseContext::WHERE() {
  return getToken(SQLParser::WHERE, 0);
}

SQLParser::Logic_exprContext *SQLParser::Where_clauseContext::logic_expr() {
  return getRuleContext<SQLParser::Logic_exprContext>(0);
}


size_t SQLParser::Where_clauseContext::getRuleIndex() const {
  return SQLParser::RuleWhere_clause;
}

void SQLParser::Where_clauseContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterWhere_clause(this);
}

void SQLParser::Where_clauseContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitWhere_clause(this);
}

SQLParser::Where_clauseContext *SQLParser::where_clause() {
  Where_clauseContext *_localctx =
      _tracker.createInstance<Where_clauseContext>(_ctx, getState());
  enterRule(_localctx, 8, SQLParser::RuleWhere_clause);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(SQLParser::WHERE);
    setState(101);
    logic_expr(0);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Logic_exprContext
//------------------------------------------------------------------

SQLParser::Logic_exprContext::Logic_exprContext(ParserRuleContext *parent_ctx,
                                                size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

SQLParser::Relation_exprContext *SQLParser::Logic_exprContext::relation_expr() {
  return getRuleContext<SQLParser::Relation_exprContext>(0);
}

SQLParser::Enclosed_exprContext *SQLParser::Logic_exprContext::enclosed_expr() {
  return getRuleContext<SQLParser::Enclosed_exprContext>(0);
}

std::vector<SQLParser::Logic_exprContext *>
SQLParser::Logic_exprContext::logic_expr() {
  return getRuleContexts<SQLParser::Logic_exprContext>();
}

SQLParser::Logic_exprContext *SQLParser::Logic_exprContext::logic_expr(
    size_t i) {
  return getRuleContext<SQLParser::Logic_exprContext>(i);
}

tree::TerminalNode *SQLParser::Logic_exprContext::AND() {
  return getToken(SQLParser::AND, 0);
}

tree::TerminalNode *SQLParser::Logic_exprContext::OR() {
  return getToken(SQLParser::OR, 0);
}


size_t SQLParser::Logic_exprContext::getRuleIndex() const {
  return SQLParser::RuleLogic_expr;
}

void SQLParser::Logic_exprContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterLogic_expr(this);
}

void SQLParser::Logic_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitLogic_expr(this);
}


SQLParser::Logic_exprContext *SQLParser::logic_expr() {
  return logic_expr(0);
}

SQLParser::Logic_exprContext *SQLParser::logic_expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  SQLParser::Logic_exprContext *_localctx =
      _tracker.createInstance<Logic_exprContext>(_ctx, parentState);
  SQLParser::Logic_exprContext *previousContext = _localctx;
  (void)previousContext;  // Silence compiler, in case the context is not used
                          // by generated code.
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, SQLParser::RuleLogic_expr, precedence);


  auto onExit = finally([=] { unrollRecursionContexts(parentContext); });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(106);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SQLParser::OR:
      case SQLParser::AND:
      case SQLParser::NOT:
      case SQLParser::IN:
      case SQLParser::BETWEEN:
      case SQLParser::LIKE:
      case SQLParser::WHERE:
      case SQLParser::SELECT:
      case SQLParser::AS:
      case SQLParser::BY:
      case SQLParser::ORDER:
      case SQLParser::ASC:
      case SQLParser::DESC:
      case SQLParser::LIMIT:
      case SQLParser::REGULAR_ID: {
        setState(104);
        relation_expr();
        break;
      }

      case SQLParser::LP: {
        setState(105);
        enclosed_expr();
        break;
      }

      default:
        throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(116);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5,
                                                                     _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty()) triggerExitRuleEvent();
        previousContext = _localctx;
        setState(114);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
            _input, 4, _ctx)) {
          case 1: {
            _localctx = _tracker.createInstance<Logic_exprContext>(
                parentContext, parentState);
            pushNewRecursionContext(_localctx, startState, RuleLogic_expr);
            setState(108);

            if (!(precpred(_ctx, 3)))
              throw FailedPredicateException(this, "precpred(_ctx, 3)");
            setState(109);
            match(SQLParser::AND);
            setState(110);
            logic_expr(4);
            break;
          }

          case 2: {
            _localctx = _tracker.createInstance<Logic_exprContext>(
                parentContext, parentState);
            pushNewRecursionContext(_localctx, startState, RuleLogic_expr);
            setState(111);

            if (!(precpred(_ctx, 2)))
              throw FailedPredicateException(this, "precpred(_ctx, 2)");
            setState(112);
            match(SQLParser::OR);
            setState(113);
            logic_expr(3);
            break;
          }
        }
      }
      setState(118);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input,
                                                                       5, _ctx);
    }
  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Enclosed_exprContext
//------------------------------------------------------------------

SQLParser::Enclosed_exprContext::Enclosed_exprContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

tree::TerminalNode *SQLParser::Enclosed_exprContext::LP() {
  return getToken(SQLParser::LP, 0);
}

SQLParser::Logic_exprContext *SQLParser::Enclosed_exprContext::logic_expr() {
  return getRuleContext<SQLParser::Logic_exprContext>(0);
}

tree::TerminalNode *SQLParser::Enclosed_exprContext::RP() {
  return getToken(SQLParser::RP, 0);
}


size_t SQLParser::Enclosed_exprContext::getRuleIndex() const {
  return SQLParser::RuleEnclosed_expr;
}

void SQLParser::Enclosed_exprContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterEnclosed_expr(this);
}

void SQLParser::Enclosed_exprContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitEnclosed_expr(this);
}

SQLParser::Enclosed_exprContext *SQLParser::enclosed_expr() {
  Enclosed_exprContext *_localctx =
      _tracker.createInstance<Enclosed_exprContext>(_ctx, getState());
  enterRule(_localctx, 12, SQLParser::RuleEnclosed_expr);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    match(SQLParser::LP);
    setState(120);
    logic_expr(0);
    setState(121);
    match(SQLParser::RP);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Relation_exprContext
//------------------------------------------------------------------

SQLParser::Relation_exprContext::Relation_exprContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

SQLParser::IdentifierContext *SQLParser::Relation_exprContext::identifier() {
  return getRuleContext<SQLParser::IdentifierContext>(0);
}

SQLParser::Rel_operContext *SQLParser::Relation_exprContext::rel_oper() {
  return getRuleContext<SQLParser::Rel_operContext>(0);
}

SQLParser::Value_exprContext *SQLParser::Relation_exprContext::value_expr() {
  return getRuleContext<SQLParser::Value_exprContext>(0);
}

tree::TerminalNode *SQLParser::Relation_exprContext::LIKE() {
  return getToken(SQLParser::LIKE, 0);
}

tree::TerminalNode *SQLParser::Relation_exprContext::IN() {
  return getToken(SQLParser::IN, 0);
}

tree::TerminalNode *SQLParser::Relation_exprContext::LP() {
  return getToken(SQLParser::LP, 0);
}

SQLParser::In_value_expr_listContext *
SQLParser::Relation_exprContext::in_value_expr_list() {
  return getRuleContext<SQLParser::In_value_expr_listContext>(0);
}

tree::TerminalNode *SQLParser::Relation_exprContext::RP() {
  return getToken(SQLParser::RP, 0);
}

tree::TerminalNode *SQLParser::Relation_exprContext::NOT() {
  return getToken(SQLParser::NOT, 0);
}

tree::TerminalNode *SQLParser::Relation_exprContext::CONTAIN_ALL() {
  return getToken(SQLParser::CONTAIN_ALL, 0);
}

tree::TerminalNode *SQLParser::Relation_exprContext::CONTAIN_ANY() {
  return getToken(SQLParser::CONTAIN_ANY, 0);
}

tree::TerminalNode *SQLParser::Relation_exprContext::IS() {
  return getToken(SQLParser::IS, 0);
}

tree::TerminalNode *SQLParser::Relation_exprContext::NULL_V() {
  return getToken(SQLParser::NULL_V, 0);
}

SQLParser::Function_callContext *
SQLParser::Relation_exprContext::function_call() {
  return getRuleContext<SQLParser::Function_callContext>(0);
}


size_t SQLParser::Relation_exprContext::getRuleIndex() const {
  return SQLParser::RuleRelation_expr;
}

void SQLParser::Relation_exprContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterRelation_expr(this);
}

void SQLParser::Relation_exprContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitRelation_expr(this);
}

SQLParser::Relation_exprContext *SQLParser::relation_expr() {
  Relation_exprContext *_localctx =
      _tracker.createInstance<Relation_exprContext>(_ctx, getState());
  enterRule(_localctx, 14, SQLParser::RuleRelation_expr);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(162);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 10, _ctx)) {
      case 1: {
        enterOuterAlt(_localctx, 1);
        setState(123);
        identifier();
        setState(124);
        rel_oper();
        setState(125);
        value_expr();
        break;
      }

      case 2: {
        enterOuterAlt(_localctx, 2);
        setState(127);
        identifier();
        setState(128);
        match(SQLParser::LIKE);
        setState(129);
        value_expr();
        break;
      }

      case 3: {
        enterOuterAlt(_localctx, 3);
        setState(131);
        identifier();
        setState(133);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == SQLParser::NOT) {
          setState(132);
          match(SQLParser::NOT);
        }
        setState(135);
        match(SQLParser::IN);
        setState(136);
        match(SQLParser::LP);
        setState(137);
        in_value_expr_list();
        setState(138);
        match(SQLParser::RP);
        break;
      }

      case 4: {
        enterOuterAlt(_localctx, 4);
        setState(140);
        identifier();
        setState(142);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == SQLParser::NOT) {
          setState(141);
          match(SQLParser::NOT);
        }
        setState(144);
        _la = _input->LA(1);
        if (!(_la == SQLParser::CONTAIN_ALL

              || _la == SQLParser::CONTAIN_ANY)) {
          _errHandler->recoverInline(this);
        } else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(145);
        match(SQLParser::LP);
        setState(147);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~0x3fULL) == 0) &&
             ((1ULL << _la) &
              ((1ULL << SQLParser::TRUE_V) | (1ULL << SQLParser::FALSE_V) |
               (1ULL << SQLParser::INTEGER) | (1ULL << SQLParser::FLOAT) |
               (1ULL << SQLParser::SQUOTA_STRING) |
               (1ULL << SQLParser::DQUOTA_STRING))) != 0)) {
          setState(146);
          in_value_expr_list();
        }
        setState(149);
        match(SQLParser::RP);
        break;
      }

      case 5: {
        enterOuterAlt(_localctx, 5);
        setState(151);
        identifier();
        setState(152);
        match(SQLParser::IS);
        setState(154);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == SQLParser::NOT) {
          setState(153);
          match(SQLParser::NOT);
        }
        setState(156);
        match(SQLParser::NULL_V);
        break;
      }

      case 6: {
        enterOuterAlt(_localctx, 6);
        setState(158);
        function_call();
        setState(159);
        rel_oper();
        setState(160);
        value_expr();
        break;
      }
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Rel_operContext
//------------------------------------------------------------------

SQLParser::Rel_operContext::Rel_operContext(ParserRuleContext *parent_ctx,
                                            size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

tree::TerminalNode *SQLParser::Rel_operContext::E_OP() {
  return getToken(SQLParser::E_OP, 0);
}

SQLParser::Ne_opContext *SQLParser::Rel_operContext::ne_op() {
  return getRuleContext<SQLParser::Ne_opContext>(0);
}

tree::TerminalNode *SQLParser::Rel_operContext::L_OP() {
  return getToken(SQLParser::L_OP, 0);
}

tree::TerminalNode *SQLParser::Rel_operContext::G_OP() {
  return getToken(SQLParser::G_OP, 0);
}

SQLParser::Le_opContext *SQLParser::Rel_operContext::le_op() {
  return getRuleContext<SQLParser::Le_opContext>(0);
}

SQLParser::Ge_opContext *SQLParser::Rel_operContext::ge_op() {
  return getRuleContext<SQLParser::Ge_opContext>(0);
}


size_t SQLParser::Rel_operContext::getRuleIndex() const {
  return SQLParser::RuleRel_oper;
}

void SQLParser::Rel_operContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterRel_oper(this);
}

void SQLParser::Rel_operContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitRel_oper(this);
}

SQLParser::Rel_operContext *SQLParser::rel_oper() {
  Rel_operContext *_localctx =
      _tracker.createInstance<Rel_operContext>(_ctx, getState());
  enterRule(_localctx, 16, SQLParser::RuleRel_oper);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(170);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 11, _ctx)) {
      case 1: {
        enterOuterAlt(_localctx, 1);
        setState(164);
        match(SQLParser::E_OP);
        break;
      }

      case 2: {
        enterOuterAlt(_localctx, 2);
        setState(165);
        ne_op();
        break;
      }

      case 3: {
        enterOuterAlt(_localctx, 3);
        setState(166);
        match(SQLParser::L_OP);
        break;
      }

      case 4: {
        enterOuterAlt(_localctx, 4);
        setState(167);
        match(SQLParser::G_OP);
        break;
      }

      case 5: {
        enterOuterAlt(_localctx, 5);
        setState(168);
        le_op();
        break;
      }

      case 6: {
        enterOuterAlt(_localctx, 6);
        setState(169);
        ge_op();
        break;
      }
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Value_exprContext
//------------------------------------------------------------------

SQLParser::Value_exprContext::Value_exprContext(ParserRuleContext *parent_ctx,
                                                size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

SQLParser::ConstantContext *SQLParser::Value_exprContext::constant() {
  return getRuleContext<SQLParser::ConstantContext>(0);
}

SQLParser::Function_callContext *SQLParser::Value_exprContext::function_call() {
  return getRuleContext<SQLParser::Function_callContext>(0);
}


size_t SQLParser::Value_exprContext::getRuleIndex() const {
  return SQLParser::RuleValue_expr;
}

void SQLParser::Value_exprContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterValue_expr(this);
}

void SQLParser::Value_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitValue_expr(this);
}
